# 42_cub3D

./: .gitignore  CMakeLists.txt  Makefile  Makefile_so_long  bad_xpm.cub  creepy.cub  cub3D  cub3d.h  fill_paths.c  grande_map.cub  same_texture2.cub  square_map.cub  test_color2.cub  test_color3.cub  test_color4.cub  toute_petite.cub
.run/: all.run.xml
TEST_CUB3D_ESLAMBER/: test.sh  valgrind_test.sh
TEST_CUB3D_ESLAMBER/map_correcte/: grande_map.cub  grande_map2.cub  grande_map3.cub  grande_map4.cub  grande_map5.cub  grande_map6.cub  grande_map7.cub  map_démesurée_labyrinthe.cub  map_nord.cub  map_nord2.cub  test_color.cub  test_color2.cub  test_color3.cub  test_color4.cub  toute_petite.cub
TEST_CUB3D_ESLAMBER/map_incorrecte/: double_north_texture.cub  double_perso.cub  double_perso2.cub  double_perso3.cub  double_weast_texture.cub  no_map.cub  one_color.cub  one_texture.cub  opened_map.cub  opened_map2.cub  opened_map3.cub  opened_map4.cub  opened_map5.cub  opened_map6.cub  opened_map7.cub  opened_map8.cub  opened_map9.cub  same_texture.cub  same_texture2.cub  test_color.cub  test_color2.cub  test_color3.cub  unvalid_space.cub  without_perso.cub  wrong_component.cub
TEST_CUB3D_ESLAMBER/maps/bad/: cheese_maze.cub  color_invalid_rgb.cub  color_missing.cub  color_missing_ceiling_rgb.cub  color_missing_floor_rgb.cub  color_none.cub  file_letter_end.cub  map_first.cub  map_middle.cub  map_missing.cub  map_too_small.cub  matrix.cub  player_multiple.cub  player_none.cub  player_on_edge.cub  sad_face.cub  textures_dir.cub  textures_duplicates.cub  textures_invalid.cub  textures_missing.cub  textures_not_xpm.cub  wall_hole_east.cub  wall_hole_north.cub  wall_hole_south.cub  wall_hole_west.cub  wall_none.cub
TEST_CUB3D_ESLAMBER/maps/good/: creepy.cub  dungeon.cub  library.cub  square_map.cub  subject_map.cub  test_map.cub  test_map_hole.cub  test_pos_bottom.cub  test_pos_left.cub  test_pos_right.cub  test_pos_top.cub  test_textures.cub  test_whitespace.cub  textures_forbidden.cub  works.cub
TEST_CUB3D_ESLAMBER/textures/: exit.xpm
TEST_CUB3D_ESLAMBER/textures/simonkraft/: README.md
TEST_CUB3D_ESLAMBER/textures/test/: north
TEST_CUB3D_ESLAMBER/textures/wolfenstein/: README.md
assets/maps/correct_maps/: creepy.cub  dungeon.cub  forbidden.cub  grande_map.cub  grande_map2.cub  grande_map3.cub  grande_map4.cub  grande_map5.cub  grande_map6.cub  grande_map7.cub  library.cub  map_nord.cub  works.cub  (+17 more)
assets/textures/: bad.xpm  bragging.xpm  chocolate.xpm  chocolate_white.xpm  pandinou_arc_ciel.xpm  rick_roll.xpm
headers/: cub3D.h  cub3d.h
libft/: Makefile
libft/inc/: get_next_line.h  libft.h
maps_from_so_long/: aleatoire.ber  badtype.ber.txt  bigmap.cub  cut.cub  error.ber  error2.cub  error3.cub  error4.cub  errormorethen1_EXIT.ber  errornoCOLL.ber  errornoOEPC1.cub  example.cub  invalidOdject.ber  mental.ber  mini_snail.ber  nopatherrormap.cub  notclosed.cub  notcollectible.cub  notoneexit.ber  notoneplayer.ber  notrectangular.cub  notwinnable.ber  snail.cub  twoexits.ber  twoplayers.cub
mlx/: README.md  mlx.h
src/: colors.c  errors.c  exit.c  game.c  hook.c  init.c  main.c  map.c  map_check.c  map_init.c  move.c  parsing.c  player.c  raycasting.c  raycasting_utils.c  render.c  rotate.c  utils.c
src_from_so_long/: check_map.c  errors.c  fill_paths.c  init.c  map.c  map_utils.c  moves.c  players_moves.c  so_long.c  utils.c
test/: north.xpm
textures/door/: door3.xpm  door4.xpm  door6.xpm
textures/test/: east.xpm  south.xpm
yuko_textures/: door.xpm  doraemon.xpm  pikachu.xpm
yuko_textures/door/: door1.xpm  door2.xpm  door5.xpm  door6.xpm
yuko_textures/test/: west.xpm
yuko_textures/treasure/: barrel.xpm  treasure.xpm
yuko_textures/walls/: brown.xpm
(+132 files in other folders)
